background was changed

--- a/styles/scss/styles.scss
+++ b/styles/scss/styles.scss
@@ -13,7 +13,7 @@ body {
 .header {
     height: 848px;
     // background-color: #56CCF2;
-    background-image: url(/img/Rectangle.png);
+    // background-image: url(/img/Rectangle.png);
     background-repeat: no-repeat;
     color: #FFFFFF;
     margin: 0 auto;
@@ -146,6 +146,13 @@ body {
     position: absolute;
     top: 0;
     left: 600px;
+    z-index: -1;
+}
+
+.img_bg_main {
+    position: absolute;
+    top: 0;
+    left: 0;
     z-index: -1;
 }
 
@@ -384,7 +391,7 @@ body {
 
 .features {
     height: 1116px;
-    background-image: url(/img/bg_blue.png);
+    // background-image: url(/img/bg_blue.png);
     background-repeat: no-repeat;
     position: relative;
 
@@ -460,6 +467,13 @@ body {
     position: absolute;
     left: 553px;
     bottom: 140px;
+}
+
+.img_bg_main1 {
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: -1;
 }
 
 .testimonials {
