--- a/styles/scss/styles.scss
+++ b/styles/scss/styles.scss
@@ -12,7 +12,7 @@ body {
 
 .header {
     height: 848px;
-    background-color: #56CCF2;
+    // background-color: #56CCF2;
     // background-image: url(/img/Rectangle.png);
     background-repeat: no-repeat;
     color: #FFFFFF;
