add some adaptive

--- a/styles/scss/styles.scss
+++ b/styles/scss/styles.scss
@@ -3,14 +3,23 @@
 }
 
 body {
-    width: 1600px;
+    width: 100%;
     height: auto;
     position: relative;
     margin: 0 auto;
     box-sizing: border-box;
+    max-width: 100%;
+    overflow-x: hidden;
 }
 
+.responsive {
+    max-width: 100%;
+    max-height: auto;
+  }
+
 .header {
+    max-width: 1600px;
+    min-width: 320px;
     height: 848px;
     background-repeat: no-repeat;
     color: #FFFFFF;
@@ -195,6 +204,9 @@ body {
 
     background: #FCFCFD;
     height: 832px;
+    max-width: 1600px;
+    min-width: 320px;
+    margin: 0 auto;
 
     &_title {
         position: relative;
@@ -246,12 +258,14 @@ body {
 }
 
 .about {
-    width: 1600px;
+    max-width: 1600px;
+    min-width: 320px;
     height: 704px;
     display: flex;
     justify-content: space-between;
     align-items: center;
     flex-direction: column;
+    margin: 0 auto;
 
     &_card {
         width: 264px;
@@ -315,7 +329,8 @@ body {
 
     height: 816px;
     background: #FCFCFD;
-    width: 1462px;
+    max-width: 1600px;
+    min-width: 320px;
     margin: 0 auto;
     position: relative;
 
@@ -411,9 +426,11 @@ body {
 
 .features {
     height: 1116px;
-    // background-image: url(/img/bg_blue.png);
+    max-width: 1600px;
+    min-width: 320px;
     background-repeat: no-repeat;
     position: relative;
+    margin: 0 auto;
 
     &_text-block {
 
@@ -499,6 +516,8 @@ body {
 .testimonials {
     height: 464px;
     background: #FFFFFF;
+    max-width: 1600px;
+    min-width: 320px;
     margin: 0 auto;
     position: relative;
 
@@ -618,6 +637,9 @@ body {
     height: 1715px;
     background: #FCFCFD;
     position: relative;
+    max-width: 1600px;
+    min-width: 320px;
+    margin: 0 auto;
 
     &_textarea {
         margin: 0 auto;
