--- a/styles/scss/styles.scss
+++ b/styles/scss/styles.scss
@@ -100,7 +100,7 @@ body {
         &:hover {
             cursor: pointer;
             color: #FFFFFF;
-            background: #2F80ED;
+            background: #12AADB;
             border: 1px solid #FFFFFF;
         }
     }
