--- a/styles/styles.css
+++ b/styles/styles.css
@@ -90,7 +90,7 @@ body {
 .header_button:hover {
   cursor: pointer;
   color: #FFFFFF;
-  background: #2F80ED;
+  background: #12AADB;
   border: 1px solid #FFFFFF;
 }
 .header_image {
