--- a/styles/scss/styles.scss
+++ b/styles/scss/styles.scss
@@ -795,6 +795,15 @@ body {
             line-height: 150%;
             border-bottom: 1px solid #E1E1E1;
             padding-bottom: 18px;
+            display: block;
+            border: 0;
+            margin-bottom: 48px;
+            width: 100%;
+            border-bottom: 1px solid #E1E1E1;
+
+            &::placeholder {
+                color: #152032;
+            }
         }
 
         &__submit {
