--- a/styles/styles.css
+++ b/styles/styles.css
@@ -31,34 +31,47 @@ body {
   margin: 0 auto;
   position: relative;
 }
-.header_navbar {
+.header .navbar {
   padding-top: 51px;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  position: relative;
 }
-.header_navbar__link {
+.header .navbar-toggler {
+  color: white;
+}
+.header .navbar-nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: nowrap;
+  width: 100%;
+  max-width: 1200px;
+}
+.header .navbar-nav .nav-item {
   text-decoration: none;
   position: relative;
   color: #FFFFFF;
   font-size: 16px;
   line-height: 150%;
+  align-items: center;
 }
-.header_navbar__link:first-child {
+.header .navbar-nav .nav-item:first-child {
   font-size: 32px;
-  margin-left: 227px;
-  margin-right: 143px;
+  padding-left: 227px;
+  padding-right: 143px;
 }
-.header_navbar__link:first-child:hover {
+.header .navbar-nav .nav-item:first-child:hover {
   border: none;
 }
-.header_navbar__link:last-child {
-  margin-right: 424px;
+.header .navbar-nav .nav-item:last-child {
   margin-left: 135px;
 }
-.header_navbar__link:hover {
+.header .navbar-nav .nav-item:hover {
   border-bottom: 1px solid #FCC304;
+}
+.header .navbar-nav .nav-item .nav-link {
+  color: white;
+}
+.header .navbar-nav .nav-item .nav-link:hover {
+  color: white;
 }
 .header h1 {
   font-weight: 900;
@@ -147,6 +160,10 @@ body {
   font-weight: 800;
   font-size: 12.6px;
   line-height: 150%;
+  color: #253757;
+}
+.header_image__side-link:hover {
+  text-decoration: none;
   color: #253757;
 }
 
