--- a/styles/scss/styles.scss
+++ b/styles/scss/styles.scss
@@ -593,7 +593,8 @@ body {
 
         &:hover {
             cursor: pointer;
-            background: #E5E5E5;
+            background: rgba(238, 238, 238, 0.4);
+            box-shadow: none;
         }
 
         &__color {
