--- a/styles/styles.css
+++ b/styles/styles.css
@@ -525,7 +525,8 @@ body {
 }
 .testimonials_person-box:hover {
   cursor: pointer;
-  background: #E5E5E5;
+  background: rgba(238, 238, 238, 0.4);
+  box-shadow: none;
 }
 .testimonials_person-box__color {
   position: absolute;
